--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -50,6 +50,10 @@ nav {
     align-items: center;
 }
 
+.dentalicon {
+    width: 15%;
+}
+
 @media only screen and (max-width: 1024px) {
     header .navbar-btn {
         visibility: visible;
