--- a/src/components/procedures/Procedures.css
+++ b/src/components/procedures/Procedures.css
@@ -9,14 +9,16 @@
 .procedure_container {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-evenly;
     text-align: center;
 }
 
 .procedure_container-item {
-    margin: 60px;
-    width: 500px;
-    background-color: white;
+    margin: 30px;
+    margin-bottom: 30px;
+    width: 400px;
+    background-color: lightgray;
+    border: 4px solid black;
 }
 
 .procedure_container_crowns_bridges {
@@ -29,4 +31,8 @@
 
 .procedure_container_extractions {
     min-height: 300px;
+}
+
+.procedure_container-item:hover {
+    box-shadow: 0 4px 8px 0 lightblue, 0 6px 20px 0 lightblue;
 }
