--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -51,8 +51,9 @@ nav {
 }
 
 .dentalicon {
-    width: 14%;
+    width: 15%;
     border-radius: 50%;
+    cursor: pointer;
 }
 
 @media only screen and (max-width: 1024px) {
