--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -13,3 +13,9 @@
     text-align: center;
     border-style: solid
 }
+
+@media only screen and (max-width: 1024px) {
+    span.text {
+        display: none;
+    }
+}
