--- a/src/components/navbar/Nav.css
+++ b/src/components/navbar/Nav.css
@@ -1,4 +1,4 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
@@ -54,6 +54,10 @@ nav {
     width: 15%;
     border-radius: 50%;
     cursor: pointer;
+}
+
+html {
+    scroll-behavior: smooth;
 }
 
 @media only screen and (max-width: 1024px) {
