--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,6 +14,17 @@
     border-style: solid
 }
 
+.text {
+    cursor: pointer;
+    text-decoration: none;
+}
+
+.icon {
+    cursor: pointer;
+    text-decoration: none;
+}
+
+
 @media only screen and (max-width: 1024px) {
     span.text {
         display: none;
