--- a/src/components/header/Header.css
+++ b/src/components/header/Header.css
@@ -14,14 +14,19 @@
     border-style: solid
 }
 
-.text {
+/* .text {
     cursor: pointer;
     text-decoration: none;
-}
+} */
 
-.icon {
+/* .icon {
     cursor: pointer;
     text-decoration: none;
+} */
+
+a {
+    text-decoration: none;
+    color: black;
 }
 
 
