--- a/src/components/footer/Footer.css
+++ b/src/components/footer/Footer.css
@@ -1,33 +1,45 @@
 .footer-container {
-    background-color: lightblue;
-}
-
-.footer-information {
-    display: inline;
-}
-
-.footer-contact-container {
+    background: lightblue;
+    padding: 0rem 0 2rem 0;
     display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+}
+
+.footer-links {
+    width: 100%;
+    max-width: 1000px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-link-wrapper {
+    display: flex;
+    padding-bottom: 30px;
+    padding-top: 30px;
+}
+
+.footer-link-items {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    margin: 16px;
+    text-align: center;
+    width: 160px;
+    box-sizing: border-box;
     text-align: center;
 }
 
-.footer-container-item {
-    margin: 40px;
-    width: 500px;
+.footer-link-items h2 {
+    margin-bottom: 16px;
 }
 
-.footer-container-contact {
-    min-height: 100px;
+
+.footer-link-items p {
+    margin-bottom: 8px;
 }
 
-.footer-container-hours {
-    min-height: 100px;
-}
-
-.footer-copyright {
-    display: flex;
-    justify-content: center;
-    padding-bottom: 10px;
+.footer-link-items a:hover {
+    color: white;
 }
